--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="number" placeholder="ID Number" id="id-number">
             <input type="text" placeholder="Job Title" id="job-title">
             <input type="number" placeholder="Annual Salary" id="annual-salary">
-            <button id="add-employee">Submit</button>
+            <button id="add-employee-button">Submit</button>
         </div>
         <div id="employee-results">
             <label for="employee-results"><h2>Employee Results</h2></label>
@@ -33,18 +33,11 @@
                     <th>Delete</th>
                 </thead>
                 <tbody id="employee-output">
-                    <tr>
-                        <td>Jane</td>
-                        <td>Doe</td>
-                        <td>4321</td>
-                        <td>CSR</td>
-                        <td>35,000</td>
-                        <td><button id="delete-button">Delete</button></td>
-                    </tr>
                 </tbody>
                 <tfoot>
                     <tr id="total-employee-cost">
-                        <td><h3>Total Monthly Cost: $35,000</h3></td>
+                        <td>
+                            <h3>Total Monthly Cost: $35,000</h3></td>
                     </tr>
                 </tfoot>
             </table>
