looped salaries in array and appended the total monthly cost to targeted output. added class to change background color if monthly cost exceeds 20k.

--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
                 </thead>
                 <tbody id="employee-output">
                 </tbody>
-                <tfoot>
-                    <tr id="total-employee-cost">
-                        <td>
-                            <h3>Total Monthly Cost: $35,000</h3></td>
-                    </tr>
+                <tfoot id="monthly-cost-output">
                 </tfoot>
             </table>
         </div>
